ui: fix overflowing issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -152,7 +152,6 @@ body {
   color: var(--color-primary-100);
   background: var(--color-secondary-300);
   font-family: Arial, Helvetica, sans-serif;
-  overflow-x: hidden;
 }
 
 .gradient-text {
